--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
     <meta name="description" content="Servicios de construccion de viviendas">
     <meta name="keywords" content="Construcción, herramientas, viviendas, hogar">
     <meta name="authors" content="Agustin Esquendefe - Ivan Duarte">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" href="./svg/Logo-Flaticon-Sin-Fondo-OriginalBS-NC.svg">
     <title>Blackstone NC ® | Construction INC</title>
 </head>
 <body>
+    <div class="preloader">
+        <img src="./svg/Logo-Flaticon-Sin-Fondo-OriginalBS-NC.svg" alt="Logo de precarga" />
+      </div>
     <header>
-        <h1>hola</h1>
+        
     </header>
-    <main></main>
+    <main>
+        <h1>hi</h1>
+    </main>
     <footer></footer>
+    <script src="./js/precarga.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
