--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header>
       <!--Navbar-->
       <section>
-        <nav class="navbar navbar-expand-lg bg-black p-2" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-black p-2 navbarPropio" data-bs-theme="dark">
           <div class="container-fluid">
             <a class="navbar-brand mx-auto" href="./index.html">
               <img
@@ -72,16 +72,22 @@
                       data-bs-toggle="dropdown"
                       aria-expanded="false"
                     >
-                      Dropdown
+                      Carrers & Subs
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Carrers</a></li>
                       <li>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Employee aplication</a>
                       </li>
-                      <li><hr class="dropdown-divider" /></li>
                       <li>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="#">Subcontractor aplications
+                        </a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">Subcontractor & Supplier Diversity</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#">Subcontractor Application</a>
                       </li>
                     </ul>
                   </li>
@@ -93,27 +99,22 @@
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
                   >
-                    Dropdown
+                  Bids
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li>
-                      <a class="dropdown-item" href="#">Another action</a>
-                    </li>
-                    <li><hr class="dropdown-divider" /></li>
-                    <li>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                    </li>
+                    <li><a class="dropdown-item" href="#">Bidding</a></li>
+                    <li><a class="dropdown-item" href="#">Bidding Process</a></li>
+                    <li><a class="dropdown-item" href="#">Help</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="#"
-                      >Home</a
+                      >Projects</a
                     >
                   </li>
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="#"
-                      >Home</a
+                      >Contact us</a
                     >
                   </li>
               </ul>
