--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
     <header>
       <!--Navbar-->
       <section>
-        <nav class="navbar navbar-expand-lg bg-black p-2 navbarPropio" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-black p-2 navbarPropio d-flex align-content-xl-between" data-bs-theme="dark">
           <div class="container-fluid">
             <a class="navbar-brand mx-auto" href="./index.html">
               <img
                 src="./img/Recurso 90BS-NC-Horizontal-Sin-Fondo.png"
                 alt="Logo"
-                height="35"
+                height="65"
               />
             </a>
             <button
