Se agregan cambios

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header>
       <!--Navbar-->
       <section>
-        <nav class="navbar navbar-expand-lg bg-black p-2 navbarPropio d-flex align-content-xl-between" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-black p-2 d-flex navbarPropio" data-bs-theme="dark">
           <div class="container-fluid">
             <a class="navbar-brand mx-auto" href="./index.html">
               <img
@@ -58,7 +58,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
+              <ul class="navbar-nav ms-xl-auto text-center">
                 <li class="nav-item">
                   <a class="nav-link" aria-current="page" href="#"
                     >Home</a
@@ -67,7 +67,7 @@
                 <li class="nav-item dropdown">
                     <a
                       class="nav-link dropdown-toggle"
-                      href="#"
+                      href="./pages/carrers/subcontractors.html"
                       role="button"
                       data-bs-toggle="dropdown"
                       aria-expanded="false"
@@ -75,26 +75,26 @@
                       Carrers & Subs
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Carrers</a></li>
+                      <li><a class="dropdown-item" href="./pages/carrers/carrers.html">Carrers</a></li>
                       <li>
-                        <a class="dropdown-item" href="#">Employee aplication</a>
+                        <a class="dropdown-item" href="./pages/carrers/online-employment-application.html">Employee aplication</a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="#">Subcontractor aplications
+                        <a class="dropdown-item" href="./pages/carrers/subcontractor-application.html">Subcontractor aplications
                         </a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="#">Subcontractor & Supplier Diversity</a>
+                        <a class="dropdown-item" href="subcontractor-&-supplier-diversity.html">Subcontractor & Supplier Diversity</a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="#">Subcontractor Application</a>
+                        <a class="dropdown-item" href="./pages/carrers/subcontractor-requeriments.html">Subcontractor Requeriments</a>
                       </li>
                     </ul>
                   </li>
                 <li class="nav-item dropdown">
                   <a
                     class="nav-link dropdown-toggle"
-                    href="#"
+                    href="./pages/bids/bids.html"
                     role="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
@@ -102,18 +102,18 @@
                   Bids
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Bidding</a></li>
-                    <li><a class="dropdown-item" href="#">Bidding Process</a></li>
-                    <li><a class="dropdown-item" href="#">Help</a></li>
+                    <li><a class="dropdown-item" href="./pages/bids/bidding.html">Bidding</a></li>
+                    <li><a class="dropdown-item" href="./pages/bids/bidding-process.html">Bidding Process</a></li>
+                    <li><a class="dropdown-item" href="./pages/bids/help.html">Help</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#"
+                    <a class="nav-link" aria-current="page" href="./pages/projects.html"
                       >Projects</a
                     >
                   </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#"
+                    <a class="nav-link" aria-current="page" href="./pages/contact-us.html"
                       >Contact us</a
                     >
                   </li>
