--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!--Header-->
     <header>
       <!--Navbar-->
-      <section>
+      <section class="position-relative z-2">
         <nav class="navbar navbar-expand-lg bg-black p-2 d-flex navbarPropio" data-bs-theme="dark">
           <div class="container-fluid">
             <a class="navbar-brand mx-auto" href="./index.html">
@@ -126,17 +126,17 @@
     <!--Main-->
     <main>
       <!--Carousel-->
-      <section>
+      <section class="carousel2">
         <div id="carouselExampleCaptions" class="carousel slide">
-          <div class="carousel-indicators">
+          <div class="carousel-indicators botonesCarousel">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
           </div>
-          <div class="carousel-inner">
+          <div class="carousel-inner carouselNew">
             <div class="carousel-item active">
-              <img src="./img/roof2.jpg" class="d-block w-100" alt="roof">
+              <img src="./img/roof2.jpg" class="d- w-100" alt="roof">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Roof</h5>
               </div>
@@ -148,7 +148,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="./img/home.png" class="d-block w-100" alt="home">
+              <img src="./img/home.jpg" class="d-block w-100" alt="home">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Home</h5>
               </div>
