--- a/index.html
+++ b/index.html
@@ -128,34 +128,34 @@
       <!--Carousel-->
       <section class="carousel2">
         <div id="carouselExampleCaptions" class="carousel slide">
-          <div class="carousel-indicators botonesCarousel">
+          <div class="carousel-indicators carouselBotones">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
           </div>
-          <div class="carousel-inner carouselNew">
+          <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="./img/roof2.jpg" class="d- w-100" alt="roof">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption  d-md-block textoCarousel">
                 <h5>Roof</h5>
               </div>
             </div>
             <div class="carousel-item">
               <img src="./img/flooring 3.jpg" class="d-block w-100" alt="Flooring">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption d-md-block textoCarousel">
                 <h5>Flooring</h5>
               </div>
             </div>
             <div class="carousel-item">
               <img src="./img/home.jpg" class="d-block w-100" alt="home">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption d-md-block textoCarousel">
                 <h5>Home</h5>
               </div>
             </div>
             <div class="carousel-item">
               <img src="./img/bulding.png" class="d-block w-100" alt="home">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption d-md-block textoCarousel">
                 <h5>Bulding</h5>
               </div>
             </div>
