Se realiza carousel totalmente responsive

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <header>
       <!--Navbar-->
       <section class="position-relative z-2">
-        <nav class="navbar navbar-expand-lg bg-black p-2 d-flex navbarPropio" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-xl bg-black p-2 d-flex navbarPropio" data-bs-theme="dark">
           <div class="container-fluid">
             <a class="navbar-brand mx-auto" href="./index.html">
               <img
