Se trabaja con las posiciones de los elementos

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       </section>
       <!--Quienes somos-->
       <section class="quienesSomos">
-        <div class="container-fluid">
+        <div class="container-fluid aparecer">
           <h2>¿Quienes Somos?</h2>
             <p>Blackstone ® es una empresa de vanguardia en construcción sostenible y eficiente energéticamente. Utilizando el material de construcción renovable por excelencia, la madera, ofrecemos soluciones que se distinguen por su calidad, valor estético y prestaciones.</p>
         </div>
