--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!--Header-->
     <header>
       <!--Navbar-->
-      <section class="position-relative z-2">
+      <section>
         <nav class="navbar navbar-expand-xl bg-black p-2 d-flex navbarPropio" data-bs-theme="dark">
           <div class="container-fluid">
             <a class="navbar-brand mx-auto" href="./index.html">
@@ -126,60 +126,64 @@
     <!--Main-->
     <main>
       <!--Carousel-->
-      <section class="carousel2">
-        <div id="carouselExampleCaptions" class="carousel slide">
-          <div class="carousel-indicators carouselBotones">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <section>
+        <div class="carousel2">
+          <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators carouselBotones">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="./img/roof2.jpg" class="d- w-100" alt="roof">
+                <div class="carousel-caption  d-md-block textoCarousel">
+                  <h5>Roof</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./img/flooring 3.jpg" class="d-block w-100" alt="Flooring">
+                <div class="carousel-caption d-md-block textoCarousel">
+                  <h5>Flooring</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./img/home.jpg" class="d-block w-100" alt="home">
+                <div class="carousel-caption d-md-block textoCarousel">
+                  <h5>Home</h5>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="./img/bulding.png" class="d-block w-100" alt="home">
+                <div class="carousel-caption d-md-block textoCarousel">
+                  <h5>Bulding</h5>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="./img/roof2.jpg" class="d- w-100" alt="roof">
-              <div class="carousel-caption  d-md-block textoCarousel">
-                <h5>Roof</h5>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./img/flooring 3.jpg" class="d-block w-100" alt="Flooring">
-              <div class="carousel-caption d-md-block textoCarousel">
-                <h5>Flooring</h5>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./img/home.jpg" class="d-block w-100" alt="home">
-              <div class="carousel-caption d-md-block textoCarousel">
-                <h5>Home</h5>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="./img/bulding.png" class="d-block w-100" alt="home">
-              <div class="carousel-caption d-md-block textoCarousel">
-                <h5>Bulding</h5>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
+        <article class="quienesSomos mt-2">
+          <div class="container-fluid aparecer">
+            <h2>¿Quienes Somos?</h2>
+              <p>Blackstone ® es una empresa de vanguardia en construcción sostenible y eficiente energéticamente. Utilizando el material de construcción renovable por excelencia, la madera, ofrecemos soluciones que se distinguen por su calidad, valor estético y prestaciones.</p>
+          </div>
+        </article>
       </section>
       <!--Quienes somos-->
-      <section class="quienesSomos">
-        <div class="container-fluid aparecer">
-          <h2>¿Quienes Somos?</h2>
-            <p>Blackstone ® es una empresa de vanguardia en construcción sostenible y eficiente energéticamente. Utilizando el material de construcción renovable por excelencia, la madera, ofrecemos soluciones que se distinguen por su calidad, valor estético y prestaciones.</p>
-        </div>
       </section>
     </main>
     <footer></footer>
     <script src="./js/precarga.js"></script>
+    <script src="./js/index/navbarFixed.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
