Se modifica container clase quienes somos

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
           </div>
         </div>
         <article class="quienesSomos mt-2">
-          <div class="container-fluid aparecer">
+          <div class="container aparecer">
             <h2>¿Quienes Somos?</h2>
             <p>
               Blackstone ® es una empresa de vanguardia en construcción
@@ -293,7 +293,6 @@
               <div class="tab-pane fade" id="pills-passivhaus" role="tabpanel" aria-labelledby="pills-passivhaus-tab" tabindex="0"><h5>Passivhaus</h5><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus saepe similique nemo a et aliquid necessitatibus enim dignissimos ipsum non, vitae explicabo, commodi laboriosam ut repellat possimus obcaecati numquam porro? item</p></div>
             </div>
           </div>
-          
         </div>
       </section>
     </main>
