preloader enabled, footer and script is added

--- a/pages/bids/bidding-process.html
+++ b/pages/bids/bidding-process.html
@@ -21,13 +21,13 @@
     <title>Blackstone NC ® | Construction INC</title>
   </head>
   <body>
-    <!--Precarga de sitio-->
-    <!-- <div class="preloader">
+    <!-- Precarga de sitio-->
+    <div class="preloader">
       <img
         src="/svg/Logo-Flaticon-Sin-Fondo-OriginalBS-NC.svg"
         alt="Logo de precarga"
       />
-    </div> -->
+    </div>
     <!--Header-->
     <header>
 
@@ -160,5 +160,14 @@
         </nav>
       </section>
     </header>
+    <footer></footer>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/js/precarga.js"></script>
+    <script src="/js/index/navbarFixed.js"></script>
     </body>
 </html>
