--- a/pages/carrers/subcontractor-requeriments.html
+++ b/pages/carrers/subcontractor-requeriments.html
@@ -22,12 +22,12 @@
   </head>
   <body>
     <!--Precarga de sitio-->
-    <!-- <div class="preloader">
+    <div class="preloader">
       <img
         src="/svg/Logo-Flaticon-Sin-Fondo-OriginalBS-NC.svg"
         alt="Logo de precarga"
       />
-    </div> -->
+    </div>
     <!--Header-->
     <header>
 
