--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
   </head>
   <body>
     <!--Precarga de sitio-->
-    <div class="preloader">
+    <!-- <div class="preloader">
       <img
         src="./svg/Logo-Flaticon-Sin-Fondo-OriginalBS-NC.svg"
         alt="Logo de precarga"
       />
-    </div>
+    </div> -->
     <!--Header-->
     <header>
       <section>
@@ -545,14 +545,21 @@
     <footer class="bg-black d-flex">
       <div class="container-fluid my-4">
         <div class="row">
-          <div class="col-lg-4 col-sm-12 d-flex align-items-center justify-content-center">
+          <div class="col-lg-4 col-sm-12 d-flex flex-column align-items-center justify-content-center">
             <img
               src="/img/Recurso 90BS-NC-Horizontal-Sin-Fondo.png"
               alt="logo"
               height="65"
               
             />
+            <div class="d-flex text-white">
+              <a href="/index.html">Home</a>
+              <p>|</p>
+              <a href="">About</a>
+              <a href="">Faq</a>
+              <a href="/pages/contact-us.html">Contact</a>
 
+            </div>
           </div>
           <div class="col-lg-4 col-sm-12 text-white my-3 text-center">
             <p>Blackstone NC Construction INC. ® | 058 W Market Street. Colfax, NC 27235 | Office (336) 497-5756</p>
