Se cambia color acordeon

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                   <img
                     src="./svg/medioambiente.svg"
                     alt="medioambiente"
-                    class="ms-auto"
+                    class="ms-auto text-white"
                   />
                 </button>
               </h4>
