Se crea sector de sponsors

--- a/index.html
+++ b/index.html
@@ -429,18 +429,14 @@
             <div class="accordion-item">
               <h4 class="accordion-header accorHeader">
                 <button
-                  class="accordion-button"
+                  class="accordion-button text-white fw-bolder"
                   type="button"
                   data-bs-toggle="collapse"
                   data-bs-target="#panelsStayOpen-collapseOne"
                   aria-expanded="true"
                   aria-controls="panelsStayOpen-collapseOne"
                 >
-                  Innovacion<img
-                    src="./svg/innovacion.svg"
-                    alt="innovacion"
-                    class="ms-auto"
-                  />
+                  Innovacion
                 </button>
               </h4>
               <div
@@ -464,7 +460,7 @@
             <div class="accordion-item">
               <h4 class="accordion-header accorHeader">
                 <button
-                  class="accordion-button collapsed"
+                  class="accordion-button collapsed text-white fw-bolder"
                   type="button"
                   data-bs-toggle="collapse"
                   data-bs-target="#panelsStayOpen-collapseTwo"
@@ -472,11 +468,6 @@
                   aria-controls="panelsStayOpen-collapseTwo"
                 >
                   Medio Ambiente
-                  <img
-                    src="./svg/medioambiente.svg"
-                    alt="medioambiente"
-                    class="ms-auto text-white"
-                  />
                 </button>
               </h4>
               <div
@@ -500,7 +491,7 @@
             <div class="accordion-item">
               <h4 class="accordion-header accorHeader">
                 <button
-                  class="accordion-button collapsed"
+                  class="accordion-button collapsed text-white fw-bolder"
                   type="button"
                   data-bs-toggle="collapse"
                   data-bs-target="#panelsStayOpen-collapseThree"
@@ -508,11 +499,6 @@
                   aria-controls="panelsStayOpen-collapseThree"
                 >
                   Salud y Confort
-                  <img
-                    src="./svg/saludyconfort.svg"
-                    alt="health"
-                    class="ms-auto"
-                  />
                 </button>
               </h4>
               <div
@@ -540,6 +526,15 @@
             </div>
           </div>
         </article>
+      </section>
+      <!--Marcas-->
+      <section>
+        <div class="container-fluid">
+          <div class="text-center fw-bolder">
+            <h2>Partners</h2>
+          </div>
+
+        </div>
       </section>
     </main>
     <footer class="bg-black d-flex">
