Se agrega preloader

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
   </head>
   <body>
     <!--Precarga de sitio-->
-    <!-- <div class="preloader">
+    <div class="preloader">
       <img
         src="./svg/Logo-Flaticon-Sin-Fondo-OriginalBS-NC.svg"
         alt="Logo de precarga"
       />
-    </div> -->
+    </div>
     <!--Header-->
     <header>
       <section>
