--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -127,7 +127,7 @@
                     <li>
                       <a
                         class="dropdown-item"
-                        href=/pages/bids/bidding-process.html"
+                        href="/pages/bids/bidding-process.html"
                         >Bidding Process</a
                       >
                     </li>
@@ -160,7 +160,9 @@
         </nav>
       </section>
     </header>
-    <footer></footer>
+    <footer>
+      
+    </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
