--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -16,6 +16,7 @@
     />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&family=Quicksand&family=Raleway:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/contactUs.css">
     <link rel="stylesheet" href="/scss/styles.css">
     <link rel="icon" href="/svg/Logo-Flaticon-Sin-Fondo-OriginalBS-NC.svg" />
     <title>Blackstone NC ® | Construction INC</title>
@@ -30,7 +31,6 @@
     </div>
     <!--Header-->
     <header>
-
       <section>
         <nav
           class="navbar navbar-expand-xl bg-black p-2 d-flex navbarPropio"
@@ -160,6 +160,14 @@
         </nav>
       </section>
     </header>
+    <main class="contenedorMain">
+      <!--Mapa-->
+      <section class="">
+        <div class="container-fluid">
+          <iframe class="w-100 mapaContact" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7666.706919845325!2d-80.00721985109286!3d36.10681557004353!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x885303ff44c9e52b%3A0x5b104004b677c5f1!2s9058%20W%20Market%20St%2C%20Colfax%2C%20NC%2027235!5e0!3m2!1ses-419!2sus!4v1698754815295!5m2!1ses-419!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </section>
+    </main>
     <footer>
       
     </footer>
